--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,13 +10,11 @@
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "module": "ESNext",
-    "moduleResolution": "bundler",
+    "moduleResolution": "Node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx",
-    
-    "types": ["vite/client"]
+    "jsx": "react-jsx"
   },
   "include": ["."],
   "exclude": ["node_modules"]
